--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Flexbox</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Yesteryear" rel="stylesheet">
 	<meta charset="UTF-8">
 </head>
 
