--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<meta charset="UTF-8">
 </head>
 
+<style>
+@import url('https://fonts.googleapis.com/css?family=Yesteryear');
+</style>
+
 <body>
 
 <div class="headercontainer">
